--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
     buildFeatures{
         viewBinding true
     }
     dataBinding {
         enabled true
-    }
-    aaptOptions {
-        cruncherEnabled = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -38,6 +38,7 @@ android {
 
     allprojects {
         repositories {
+            mavenCentral()
             maven {
                 url 'https://jitpack.io'
             }
@@ -57,6 +58,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.work:work-runtime:2.6.0-alpha02'
+    implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -79,10 +81,10 @@ dependencies {
     implementation 'com.github.developeramit3:ApiCall:8f4053a663'
 
 
-    implementation 'com.facebook.android:facebook-login:5.15.3'
+    implementation 'com.facebook.android:facebook-login:8.2.0'
 
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
-   // implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+    // implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 
 ///firebase__________________________________________________________
     implementation "com.google.firebase:firebase-core:18.0.2"
@@ -92,6 +94,13 @@ dependencies {
    // implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
 
+
+//billing
+    def billing_version = "4.0.0"
+
+    implementation "com.android.billingclient:billing-ktx:$billing_version"
+
+    implementation 'com.google.android.gms:play-services-wallet:18.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
@@ -151,7 +160,10 @@ dependencies {
     implementation 'com.erikagtierrez.multiple_media_picker:multiple-media-picker:1.0.5'
   //  implementation  'com.fxn769:pix:1.0.5'
     implementation  'com.fxn769:pix:1.5.6'
+// https://mvnrepository.com/artifact/net.minidev/json-smart
+    implementation 'net.minidev:json-smart:2.4.7'
 
+    implementation "com.github.mreram:showcaseview:1.4.0"
 
 
 
