--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.techno.baihai"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 23
-        versionName "23.2"
+        versionCode 39
+        versionName "39.2"
         multiDexEnabled true
         archivesBaseName = "BaiHaiUser"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -17,7 +17,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -50,7 +50,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.3.0-rc01"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:28.0.0'
@@ -58,7 +57,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.work:work-runtime:2.6.0-alpha02'
     implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
-
+    implementation 'org.conscrypt:conscrypt-android:2.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -80,7 +79,7 @@ dependencies {
     implementation 'com.github.developeramit3:ApiCall:8f4053a663'
 
 
-    implementation 'com.facebook.android:facebook-login:8.2.0'
+    implementation 'com.facebook.android:facebook-login:latest.release'
 
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     // implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
