--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
 
 
 
@@ -159,6 +161,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.techno.baihai.activity.SupportActivity"
+            android:configChanges="locale|orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.techno.baihai.activity.TutorialsActivity"
             android:configChanges="locale|orientation"
             android:screenOrientation="portrait" />
         <activity
