--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.techno.baihai"
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 55
-        versionName "55.2"
+        versionCode 56
+        versionName "56.2"
         multiDexEnabled true
         archivesBaseName = "BaiHaiUser"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -47,7 +47,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.core:core:1.6.0-alpha03"
+    //implementation "androidx.core:core:1.6.0-alpha03"
+    implementation "androidx.core:core:1.10.0-alpha01"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.3.0-rc01"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -56,11 +57,12 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
-    implementation 'androidx.work:work-runtime:2.6.0-alpha02'
+    implem entation 'androidx.work:work-runtime:2.7.0-alpha05'
     implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    //androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "com.google.android.material:material:1.3.0"
    // implementation 'com.jakewharton:butterknife:10.2.1'
