--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.techno.baihai"
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 56
-        versionName "56.2"
+        versionCode 79
+        versionName "79.2"
         multiDexEnabled true
         archivesBaseName = "BaiHaiUser"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -47,24 +47,33 @@ android {
 }
 
 dependencies {
+
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
     //implementation "androidx.core:core:1.6.0-alpha03"
-    implementation "androidx.core:core:1.10.0-alpha01"
+    implementation "androidx.core:core:1.10.0-alpha02"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.3.0-rc01"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.appcompat:appcompat:1.7.0-alpha02"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:28.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
-    implem entation 'androidx.work:work-runtime:2.7.0-alpha05'
-    implementation 'com.google.firebase:firebase-inappmessaging:20.1.1'
+    implementation 'androidx.work:work-runtime:2.8.0'
+    implementation 'com.google.firebase:firebase-inappmessaging:20.3.0'
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
     testImplementation 'junit:junit:4.13.2'
     //androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "com.google.android.material:material:1.3.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "com.google.android.material:material:1.8.0"
    // implementation 'com.jakewharton:butterknife:10.2.1'
 
    // annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
@@ -84,11 +93,13 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-login:latest.release'
 
-    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation 'com.facebook.android:facebook-android-sdk:15.2.0'
+   // implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     // implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 
 ///firebase__________________________________________________________
-    implementation "com.google.firebase:firebase-core:18.0.2"
+    implementation "com.google.android.play:integrity:1.1.0"
+    implementation "com.google.firebase:firebase-core:21.1.1"
     implementation('com.google.firebase:firebase-auth') {
         exclude module: "play-services-safetynet"
     }
@@ -96,24 +107,24 @@ dependencies {
   //  implementation "com.google.firebase:firebase-storage:19.2.1"
    // implementation "com.google.firebase:firebase-perf:19.0.11"
    // implementation 'com.firebaseui:firebase-ui-database:7.1.1'
-    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:23.1.1'
 
 
 //billing
-    def billing_version = "4.0.0"
+    def billing_version = "5.1.0"
 
     implementation "com.android.billingclient:billing-ktx:$billing_version"
 
-    implementation 'com.google.android.gms:play-services-wallet:18.1.3'
+    implementation 'com.google.android.gms:play-services-wallet:19.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.karumi:dexter:6.2.2'
+    implementation 'com.karumi:dexter:6.2.3'
 
-    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.android.libraries.places:places:3.0.0'
 
   //  implementation "com.github.skydoves:powermenu:2.1.4"
 
@@ -122,7 +133,7 @@ dependencies {
         // exclude Retrofit’s OkHttp dependency module and define your own module import
         exclude module: 'okhttp'
     }
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
 
@@ -138,8 +149,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:latest'
    // implementation 'com.google.android.gms:play-services-ads:19.0.0'
    //  implementation 'com.google.android.gms:play-services-vision:20.1.3'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.1'
 
     implementation 'org.apache.commons:commons-lang3:3.4'
 
@@ -156,14 +167,18 @@ dependencies {
     implementation 'com.marozzi.roundbutton:round-button:1.0.7'
 
     implementation 'com.github.shadowalker77:wp7progressbar:1.0.5'
-
+    implementation 'org.jetbrains.kotlin:kotlin-bom:1.8.0'
     //trackUser
     implementation 'com.android.installreferrer:installreferrer:2.2'
-
-    implementation 'com.facebook.android:facebook-share:[5,6)' //Facebook Share
-    implementation 'com.erikagtierrez.multiple_media_picker:multiple-media-picker:1.0.5'
+     implementation 'com.facebook.soloader:soloader:0.10.3'
+    implementation 'com.facebook.android:facebook-share:latest' //Facebook Share
+        implementation 'com.erikagtierrez.multiple_media_picker:multiple-media-picker:1.0.5'
     //  implementation  'com.fxn769:pix:1.0.5'
-    implementation  'com.fxn769:pix:1.5.6'
+     //  implementation  'com.fxn769:pix:1.5.6'
+    implementation 'io.ak1.pix:piximagepicker:1.6.3'
+
+
+
     // https://mvnrepository.com/artifact/net.minidev/json-smart
     implementation 'net.minidev:json-smart:2.4.7'
 
