--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
